sass/web.site/modules/_adplaces.sass
%medium-rectangle
	background-color: $white
	color: $zon-charcoal
	margin: remify(40px) auto
	width: 300px
%monsterbanner
	max-width: 940px
	margin: 0 auto
	padding: $little 0
%label
	color: $zon_mid_grey
	font-family: $font-tabletgothic
	font-size: remify(9px)
	letter-spacing: remify(1.5px)
	line-height: remify(10px)
	margin-bottom: remify(10px)
	text-align: right
	text-transform: uppercase
.ad
	&__label
		@extend %label
		&--tile_3,
		&--tile_12
			text-align: right
	&--tile_3,
	&--tile_12
		@extend %monsterbanner
	&--tile_7,
	&--tile_8,
	&--tile_9,
	&--tile_10,
	&--tile_11
		@extend %medium-rectangle
	&--tile_7-on-centerpage,
	&--tile_8-on-centerpage,
	&--tile_9-on-centerpage,
	&--tile_10-on-centerpage,
	&--tile_11-on-centerpage
		display: none
		&:first-child
			margin-top: remify(15px)
		+respond_min($break-desktop-min)
			display: block
	// fuck you iqd: centering of content of unknowable width
	// and positioning of adlabel
	&--tile_5-on-article
		display: table
		vertical-align: middle
		width: 100%
		// hide original label cause we cannot position it
		.ad__label
			display: none
		// uses code by iqd, may break tomorrow
		div[id*="__container__"]
			display: table-cell
			padding-top: remify(15px)
			position: relative
			text-align: center
			& > iframe[id^="google_ads_iframe"]
				display: inline-block
				margin: 0 auto
		div[id*="__container__"]:after
			@extend %label
			content: "Anzeige"
			margin-left: remify(-45px)
			position: absolute
			top: 0
	&--tile_7-on-article
		clear: both
		+respond_min($break-desktop-min)
			float: right
			margin: 0 remify(60px) remify(28px) remify(36px)
			max-width: 300px
			padding: 0
	&--tile_8-on-article
		display: none
		background: $zon_lighter_grey
		margin: 0 auto
		padding: remify(30px 0)
		+respond_min($break-tablet-min)
			display: block

